# UCSFOMOPAgent

./: .gitignore  LICENSE  NOTICE  README.md  manifest.json  pyproject.toml
benchmark/: CHANGELOG.md  OMOP_DATA_MODEL.md  README.md  questions.json
benchmark/harness/: agent_runner.py  db.py  grade.py  profile_schema.py  regress.py  run_batch.py
benchmark/results/: metrics.csv
skills/omop-phenotype-query/: SKILL.md
src/ucsfomopagent/: __init__.py  __main__.py  cli.py  server.py
